# wonderwall

./: .gitignore  DECISIONS.md  HANDOFF.md  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: adapter_default.yaml  adapter_demo.yaml  llm_deepseek4.yaml  llm_deepseek4_flash.yaml  llm_gemma3_12b.yaml  llm_gemma4.yaml  llm_qwen25_7b.yaml  scotty.yaml  sweep_default.yaml  train_default.yaml
deploy/compose/: README.md
deploy/grafana/: wonderwall-dashboard.yaml
deploy/openshift/: 0-namespace.yaml  1-strimzi-cluster.yaml  Dockerfile  README.md  wonderwall-inference.yaml  wonderwall-podmonitor.yaml  wonderwall-streamer.yaml
docs/: model_card.md
docs/adr/: 0001-pipeline-c-vs-b.md  0002-per-customer-llm-selection.md
eval/: __init__.py  baselines.py  harness.py  hmm_baseline.py  metrics.py  runner.py  sweep.py
reports/: v0.1-plumbing-results-2026-05-04.md
samples/: generate_sample.py  single_window.json
scripts/: distill_teacher.py  label_regimes.py  pin_gemma_hidden_dim.py  preflight.py  render_demo_report.py  serve_kserve.py  smoke_test_routes.py  stream_consumer.py  train.py  validate_against_entropy_price.py
src/wonderwall/: __init__.py  adapter.py  distill.py  injection.py  interfaces.py  kirk_client.py  logging_config.py  metrics_export.py  pipeline.py  (+3 more)
tests/: test_adapter.py  test_hmm_baseline.py  test_kirk_client.py  test_kirk_pipeline_integration.py  test_logging_config.py  test_metrics.py  test_pipeline.py  test_prompts.py  test_runner.py  test_serve_kserve.py  test_sweep.py  test_train.py  test_uhura_io.py
